--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -19,7 +19,7 @@ call_2 : "‹ حساب المساعد محظور يرجى رفع الحظر عن
 call_3 : "‹ حدث خطأ اثناء دعوة المساعد والسبب {0} ›"
 call_4 : "‹ انطي صلاحية اضافة مستخدمين للبوت اولا ›"
 call_5 : "- يتم التشغيل الان ."
-call_6 : "- يتم التشغيل الان ."
+call_6 : "~ يتم التشغيل الان ."
 call_7 : "‹ وخر صلاحية حظر المستخدمين من البوت ›"
 call_8 : "‹ وخر صلاحية إضافة مشرفين من البوت ›"
 call_9 : "‹ اعتقد هنالك مشكلة ، استخدم امر سكب الأمر البديل ›"
@@ -135,28 +135,28 @@ playcb_1 : "- لتبعبص بشي مالك علاقة بي ."
 playcb_2 : "- النتيجة ."
 
 # Channel Play
-cplay_1 : "You can play music in channels from this chat[{0}] to any channel or your chat's linked channel.\n\n**For linked channel:**\n`/{1} linked`\n\n**For any other channel:**\n`/{1} [Channel ID]`"
-cplay_2 : "This chat has no linked channel."
-cplay_3 : "Channel Defined to {0}\n\n__Channel ID__: {1}"
-cplay_4 : "Failed to get channel.\n\nMake sure you have added bot in your channel and promoted it as admin.\nEdit or Change channel via /channelplay"
-cplay_5 : "Only Channels are supported."
-cplay_6 : "You need to be the **Owner** of the channel[{0}] to connect it with this group.\n**Channel's Owner:** @{1}\n\nAlternatively you can link your group to that channel and then try connnecting with `/channelplay linked`"
+cplay_1 : "‹ اكتب في المجموعة ربط وحط يوزر القناة ان كانت عامة وإن كانت خاصة اكتب ربط وايدي القناة ، لاتنسى ترفع البوت مشرف في القناة والمجموعة وكذالك حساب المساعد من فضلك لو استمر الخطأ تحدث مع مطور البوت ›"
+cplay_2 : "‹ مارابط القناة بالمجموعة حتى تكدر تشغل ›"
+cplay_3 : "‹ تم الربط بنجاح ›"
+cplay_4 : "‹ هنالك خطأ اكتب في المجموعة ربط وحط يوزر القناة ان كانت عامة وإن كانت خاصة اكتب ربط وايدي القناة ، لاتنسى ترفع البوت مشرف في القناة والمجموعة وكذالك حساب المساعد من فضلك لو استمر الخطأ تحدث مع مطور البوت ›"
+cplay_5 : "‹ هذا الميزة تدعم القنوات بس ›"
+cplay_6 : "‹ استقبل هذا الامر فقط من مالك القناة \n طريقة بديلة اربط القناة بالمجموعة عن طريق اعدادات القناة ›"
 
 #Play
-play_1 : "- يتم التشغيل الان ."
-play_2 : "**🏷Channel Play Mode**\n\n🔄 Processing Query... Please Wait!\n**Linked Channel:** {0}"
-play_3 : "Failed to Process Query!"
-play_4 : "🖇 **Admins Only Play**\nOnly Admins and Auth Users can play music in this group.\n\nChange mode via /playmode and if you're already admin, reload admincache via /admincache"
-play_5 : "Failed to process audio file.\n\nAudio File Size Should Be Less Than 100 mb"
-play_6 : "**Duration Limit Exceeded**\n\n**Allowed Duration: **{0} minute(s)\n**Received Duration:** {1} hour(s)"
-play_7 : "Sorry! Bot only allows limited number of video calls due to CPU overload issues. Many other chats are using video call right now. Try switching to audio or try again later"
-play_8 : "Not A Valid Video File Extension!\n\n**Supported Formats:** {0}"
-play_9 : "Video File Size Should Be Less Than 1 GiB"
-play_10 : "**Youtube Playlist Feature**\n\nSelect the Mode in which you want to play whole Youtube Playlist"
+play_1 : "~ يتم التشغيل ."
+play_2 : "‹ جاري التشغيل ›"
+play_3 : "‹ فشل ›"
+play_4 : ""
+play_5 : ""
+play_6 : "- تجاوز الصوت المدة المحددة للتشغيل وهي : {0} \n- المدة المستلمة هي : {1} ساعة (s)"
+play_7 : ""
+play_8 : "- الملف الصوتي غير مدعوم انا ادعم الأتي : {0}  ."
+play_9 : "‹ حجم الملف كبير جدآ  يجب ان يكون اقل من 100م ›"
+play_10 : ""
 play_11 : "📎Title: **{0}\n\n⏳Duration:** {1} Mins"
 play_12 : "**Spotify Play Mode**\n\nRequested By:- {0}"
 play_13 : "**Apple Playlists**\n\nRequested By:- {0}"
-play_14 : "**Unable to verify the URL.**\nBot wonders if this url belongs to any of the following platforms: Youtube, AppleMusic, Spotify, Resso and Soundcloud.\n\nYou can use /stream for M3u8 or Remote Links."
+play_14 : "**Unable to verify the URL.**\nBot wonders if this url belongs to any of the following platforms: Youtube, AppleMusic, Spotify, Resso and Soundcloud.\n\nYou can us for M3u8 or Remote Links."
 play_15 : "**Live Stream Detected**\n\nSystems have detected your track link as live stream. Want to play live stream ?"
 play_16 : "Failed to fetch track details. Try playing any other."
 play_17 : "Unable to play this type of spotify query!\n\nI can only play spotify tracks, albums, artists and playlists"
