--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -18,8 +18,8 @@ call_1 : "‹ انطي صلاحية اضافة المستخدمين للبوت  
 call_2 : "‹ حساب المساعد محظور يرجى رفع الحظر عن الحساب @{0} ›"
 call_3 : "‹ حدث خطأ اثناء دعوة المساعد والسبب {0} ›"
 call_4 : "‹ انطي صلاحية اضافة مستخدمين للبوت اولا ›"
-call_5 : "- يتم التشغيل الان ."
-call_6 : "~ يتم التشغيل الان ."
+call_5 : "سيتم انضمام المساعد "
+call_6 : "يتم التشغيل الان"
 call_7 : "‹ وخر صلاحية حظر المستخدمين من البوت ›"
 call_8 : "‹ وخر صلاحية إضافة مشرفين من البوت ›"
 call_9 : "‹ اعتقد هنالك مشكلة ، استخدم امر سكب الأمر البديل ›"
@@ -95,7 +95,7 @@ setting_5 : ""
 setting_9 : ""
 setting_10 : ""
 setting_11 : ""
-setting_12 : "‹  اكتب في المجموعة ربط وحط يوزر القناة ان كانت عامة وإن كانت خاصة اكتب ربط وايدي القناة ، لاتنسى ترفع البوت مشرف في القناة والمجموعة وكذالك حساب المساعد ›"
+setting_12 : "‹ اكتب في المجموعة ربط وحط يوزر القناة ان كانت عامة وإن كانت خاصة اكتب ربط وايدي القناة ، لاتنسى ترفع البوت مشرف في القناة والمجموعة وكذالك حساب المساعد ›"
 setting_13 : ""
 setting_14 : ""
 setting_15 : ""
@@ -143,7 +143,7 @@ cplay_5 : "‹ هذا الميزة تدعم القنوات بس ›"
 cplay_6 : "‹ استقبل هذا الامر فقط من مالك القناة \n طريقة بديلة اربط القناة بالمجموعة عن طريق اعدادات القناة ›"
 
 #Play
-play_1 : "~ يتم التشغيل ."
+play_1 : "يتم التشغيل"
 play_2 : "‹ جاري التشغيل ›"
 play_3 : "‹ فشل ›"
 play_4 : ""
