--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -3,7 +3,7 @@ name : 🏴󠁧󠁢󠁥󠁮󠁧󠁿 English
 # General Strings
 general_1 : "‹ الرد على يوزر المستخدم او الأيدي ›"
 general_2 : "‹ أستخدامك للأمر خطا ›"
-general_3 : "- حدث خطأ غير معروف \n\n- نوع الخطأ : {0}"
+general_3 : "‹ قم باضافة حساب المساعد يدوياً حتى تستطيع تشغيل الملفات الصوتية ›"
 general_4 : "‹ انت مستخدم مجهول ›"
 general_5 : "‹ يلزم صلاحيات الدردشة الصوتية والحذف ، حتى تستطيع استخدام الأمر ›"
 general_6 : "‹ لايوجد شي في الاتصال ›"
