--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -143,7 +143,7 @@ cplay_5 : "‹ هذا الميزة تدعم القنوات بس ›"
 cplay_6 : "‹ استقبل هذا الامر فقط من مالك القناة \n طريقة بديلة اربط القناة بالمجموعة عن طريق اعدادات القناة ›"
 
 #Play
-play_1 : "يتم التشغيل"
+play_1 : " ~ يتم التشغيل ."
 play_2 : "‹ جاري التشغيل ›"
 play_3 : "‹ فشل ›"
 play_4 : ""
