--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -144,8 +144,8 @@ cplay_6 : "‹ استقبل هذا الامر فقط من مالك القناة 
 
 #Play
 play_1 : " ~ يتم التشغيل ."
-play_2 : "‹ جاري التشغيل ›"
-play_3 : "‹ فشل ›"
+play_2 : ""
+play_3 : ""
 play_4 : ""
 play_5 : ""
 play_6 : "- تجاوز الصوت المدة المحددة للتشغيل وهي : {0} \n- المدة المستلمة هي : {1} ساعة (s)"
