--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -144,7 +144,7 @@ cplay_6 : "‹ استقبل هذا الامر فقط من مالك القناة 
 
 #Play
 play_1 : " ~ يتم التشغيل ."
-play_2 : ""
+play_2 : "~"
 play_3 : ""
 play_4 : ""
 play_5 : ""
