--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -143,7 +143,7 @@ cplay_5 : "‹ هذا الميزة تدعم القنوات بس ›"
 cplay_6 : "‹ استقبل هذا الامر فقط من مالك القناة \n طريقة بديلة اربط القناة بالمجموعة عن طريق اعدادات القناة ›"
 
 #Play
-play_1 : " ~ يتم التشغيل ."
+play_1 : "~"
 play_2 : "~"
 play_3 : ""
 play_4 : ""
@@ -157,7 +157,7 @@ play_11 : "📎Title: **{0}\n\n⏳Duration:** {1} Mins"
 play_12 : "**Spotify Play Mode**\n\nRequested By:- {0}"
 play_13 : "**Apple Playlists**\n\nRequested By:- {0}"
 play_14 : "**Unable to verify the URL.**\nBot wonders if this url belongs to any of the following platforms: Youtube, AppleMusic, Spotify, Resso and Soundcloud.\n\nYou can us for M3u8 or Remote Links."
-play_15 : "**Live Stream Detected**\n\nSystems have detected your track link as live stream. Want to play live stream ?"
+play_15 : "- تم اكتشاف بث مباشر من البحث هل تريد الإستمرار ؟ ."
 play_16 : "Failed to fetch track details. Try playing any other."
 play_17 : "Unable to play this type of spotify query!\n\nI can only play spotify tracks, albums, artists and playlists"
 play_18 : "**No Active Voice Chat Found**\n\nTo use force play, there must be an active voice chat going on in your group. **Force Play** stops the playing track on voice chat and starts playing the searched track instantly without disturbing/clearing queue."
@@ -270,9 +270,9 @@ PM_B_2 : "InlineMarkup"
 PM_B_3 : "ChannelPlay"
 
 #Play
-P_B_1 : "🎵 Play Audio"
-P_B_2 : "🎥 Play Video"
-P_B_3 : "🏮 Start Live Stream"
+P_B_1 : "- تشغيل صوت ."
+P_B_2 : "- تشغيل فيديو ."
+P_B_3 : "نعم ، تشغيل البث المباشر"
 P_B_4 : "🎵 Play Playlist"
 
 #Playlist
