--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -143,8 +143,8 @@ cplay_5 : "‹ هذا الميزة تدعم القنوات بس ›"
 cplay_6 : "‹ استقبل هذا الامر فقط من مالك القناة \n طريقة بديلة اربط القناة بالمجموعة عن طريق اعدادات القناة ›"
 
 #Play
-play_1 : "~"
-play_2 : "~"
+play_1 : ""
+play_2 : ""
 play_3 : ""
 play_4 : ""
 play_5 : ""
