--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -18,7 +18,7 @@ call_1 : "‹ انطي صلاحية اضافة المستخدمين للبوت  
 call_2 : "‹ حساب المساعد محظور يرجى رفع الحظر عن الحساب @{0} ›"
 call_3 : "‹ حدث خطأ اثناء دعوة المساعد والسبب {0} ›"
 call_4 : "‹ انطي صلاحية اضافة مستخدمين للبوت اولا ›"
-call_5 : "سيتم انضمام المساعد "
+call_5 : "~"
 call_6 : "يتم التشغيل الان"
 call_7 : "‹ وخر صلاحية حظر المستخدمين من البوت ›"
 call_8 : "‹ وخر صلاحية إضافة مشرفين من البوت ›"
@@ -143,8 +143,8 @@ cplay_5 : "‹ هذا الميزة تدعم القنوات بس ›"
 cplay_6 : "‹ استقبل هذا الامر فقط من مالك القناة \n طريقة بديلة اربط القناة بالمجموعة عن طريق اعدادات القناة ›"
 
 #Play
-play_1 : ""
-play_2 : ""
+play_1 : "- يتم التشغيل ."
+play_2 : "~"
 play_3 : ""
 play_4 : ""
 play_5 : ""
